--- a/script/DataLoader/DataLoader.ipynb
+++ b/script/DataLoader/DataLoader.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For Public Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -95,6 +102,121 @@
     "\n",
     "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
     "test_loader = DataLoader(test_dataset, batch_size=64, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For ROBROS Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import pandas as pd\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "from torch.utils.data import random_split\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "import os\n",
+    "import chardet\n",
+    "\n",
+    "def standardize_row_lengths(df, target_length=1000):\n",
+    "    standardized_data = []\n",
+    " \n",
+    "    for _, row in df.iterrows():\n",
+    "        # NaN 값 제거 (선형 보간을 통해 채움)\n",
+    "        row = row.interpolate().fillna(method='bfill').fillna(method='ffill')\n",
+    "        current_length = len(row)\n",
+    "        if current_length < target_length:\n",
+    "            # 길이가 짧은 경우 interpolate\n",
+    "            x = np.linspace(0, current_length - 1, num=current_length)\n",
+    "            xp = np.linspace(0, current_length - 1, num=target_length)\n",
+    "            interpolated_row = np.interp(xp, x, row)\n",
+    "            standardized_data.append(interpolated_row)\n",
+    "        elif current_length > target_length:\n",
+    "            # 길이가 긴 경우 샘플링\n",
+    "            indices = np.linspace(0, current_length - 1, num=target_length, dtype=int)\n",
+    "            sampled_row = row.iloc[indices].values\n",
+    "            standardized_data.append(sampled_row)\n",
+    "        else:\n",
+    "            # 이미 길이가 1000인 경우\n",
+    "            standardized_data.append(row.values[:target_length])\n",
+    " \n",
+    "    # 모든 행이 동일한 길이를 가지도록 DataFrame 생성\n",
+    "    standardized_df = pd.DataFrame(standardized_data, columns=range(target_length))\n",
+    "    return standardized_df\n",
+    "\n",
+    "def extract_joint_from_filename(filename):\n",
+    "    parts = filename.split('_')\n",
+    "    if parts[1].startswith('joint'):\n",
+    "        joint_number = parts[2].split('.')[0]\n",
+    "        return joint_number\n",
+    "    return None\n",
+    "\n",
+    "def load_and_combine_files(file_list, folder_path):\n",
+    "    combined_df = pd.DataFrame()\n",
+    "    for file in file_list:\n",
+    "        file_path = os.path.join(folder_path, file)\n",
+    "        df = pd.read_csv(file_path)\n",
+    "        df = standardize_row_lengths(df)\n",
+    "        df.columns = ['Data' for _ in df.columns]\n",
+    "        \n",
+    "        joint_number = extract_joint_from_filename(file)\n",
+    "        df['joint_number'] = joint_number\n",
+    "        \n",
+    "        combined_df = pd.concat([combined_df, df], ignore_index=True)\n",
+    "    return combined_df\n",
+    "\n",
+    "def prepare_dataset(df):\n",
+    "    df['label'] = df['label'].astype(int)\n",
+    "    df['joint_number'] = df['joint_number'].astype(int)\n",
+    "    \n",
+    "    # 클래스 레이블과 조인트 위치 추출\n",
+    "    labels = df['label'].values\n",
+    "    joints = df['joint_number'].values\n",
+    "\n",
+    "    signals = df.drop(['label', 'joint_number'], axis=1).values\n",
+    "    signals = signals.astype(float)  \n",
+    "\n",
+    "    return torch.tensor(signals, dtype=torch.float32), torch.tensor(labels, dtype=torch.int32), torch.tensor(joints, dtype=torch.int32)\n",
+    "\n",
+    "folder_path = '../dataset/robros_dataset'\n",
+    "files = os.listdir(folder_path)\n",
+    "\n",
+    "class_files = {'cls': [], 'fre': []}\n",
+    "for file in files:\n",
+    "    if 'cls' in file:\n",
+    "        class_files['cls'].append(file)\n",
+    "    elif 'fre' in file:\n",
+    "        class_files['fre'].append(file)\n",
+    "\n",
+    "fre_data = load_and_combine_files(class_files['fre'], folder_path)\n",
+    "\n",
+    "fre_data['label'] = 1\n",
+    "combined_data = pd.concat([fre_data], ignore_index=False, axis=1)\n",
+    "combined_data = combined_data.drop(combined_data.index[0])\n",
+    "\n",
+    "signals, labels, joints = prepare_dataset(combined_data)\n",
+    "dataset = TensorDataset(signals, labels, joints)\n",
+    "\n",
+    "total_size = len(dataset)\n",
+    "train_size = int(total_size * 0.7) # adjust the value  \n",
+    "test_size = total_size - train_size\n",
+    "\n",
+    "\n",
+    "train_dataset, test_dataset = random_split(dataset, [train_size, test_size])\n",
+    "\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=64, shuffle=False)\n"
    ]
   }
  ],
