--- a/etc/log.ipynb
+++ b/etc/log.ipynb
@@ -31,16 +31,16 @@
     "import torch\n",
     "\n",
     "models = [\n",
-    "    'bs4_nhead8_nel6',\n",
-    "    # 'bs16_hs10_nl10',\n",
-    "    # 'bs4_hs100_nl10',\n",
-    "    # 'bs16_hs100_nl10',\n",
+    "    'rnn/bs4_hs100_nl10_lr3',\n",
+    "    'rnn/bs4_hs100_nl10_lr4',\n",
+    "    'transformer/bs4_nhead8_nl10_lr3',\n",
+    "    'transformer/bs4_nhead8_nl10_lr4',\n",
     "    # 'bs32_hs100_nl100',\n",
     "    # 'bs64_hs100_nl100',\n",
     "]\n",
     "\n",
     "max_len_models = max(len(m) for m in models)\n",
-    "root = \"/home/rtlink/robros/log/Transformer\"\n",
+    "root = \"/home/rtlink/robros/log/0205\"\n",
     "\n",
     "loss_dict = {}\n",
     "name_list = []\n",
