--- a/script/data/differentiator.ipynb
+++ b/script/data/differentiator.ipynb
@@ -2,18 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "read_csv() got an unexpected keyword argument 'error_bad_lines'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 22\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m     20\u001b[0m     file_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(input_dir, filename)\n\u001b[0;32m---> 22\u001b[0m     df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43merror_bad_lines\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m     \u001b[38;5;66;03m# 가로축(시간)을 기준으로 미분하여 속도(velocity) 계산\u001b[39;00m\n\u001b[1;32m     26\u001b[0m     velocity \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mdiff(axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mfillna(\u001b[38;5;241m0\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: read_csv() got an unexpected keyword argument 'error_bad_lines'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_159668/2748649374.py:2: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
      ]
     }
    ],
@@ -22,11 +25,11 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     " \n",
-    "base_dir = \"/home/rtlink/robros/dataset/robros_dataset_new/\" \n",
+    "base_dir = \"/home/rtlink/robros/dataset/robros_dataset/\" \n",
     "\n",
-    "input_dir = os.path.join(base_dir, \"input_data/joint_position\")\n",
-    "velocity_dir = os.path.join(base_dir, \"input_data/joint_velocity\")\n",
-    "acceleration_dir = os.path.join(base_dir, \"input_data/joint_acceleration\")\n",
+    "input_dir = os.path.join(base_dir, \"regularized_input/joint_position\")\n",
+    "velocity_dir = os.path.join(base_dir, \"regularized_input/joint_velocity\")\n",
+    "acceleration_dir = os.path.join(base_dir, \"regularized_input/joint_acceleration\")\n",
     "\n",
     "\n",
     "os.makedirs(velocity_dir, exist_ok=True)\n",
@@ -39,7 +42,7 @@
     "\n",
     "        file_path = os.path.join(input_dir, filename)\n",
     "\n",
-    "        df = pd.read_csv(file_path, on_bad_lines='skip')\n",
+    "        df = pd.read_csv(file_path)\n",
     " \n",
     "        # 가로축(시간)을 기준으로 미분하여 속도(velocity) 계산\n",
     "\n",
