--- a/etc/log.ipynb
+++ b/etc/log.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -31,16 +31,16 @@
     "import torch\n",
     "\n",
     "models = [\n",
-    "    'rnn/bs4_hs100_nl10_lr3',\n",
+    "    'rnn/bs4_hs50_nl10_lr4',\n",
     "    'rnn/bs4_hs100_nl10_lr4',\n",
-    "    'transformer/bs4_nhead8_nl10_lr3',\n",
-    "    'transformer/bs4_nhead8_nl10_lr4',\n",
+    "    # 'transformer/bs4_nhead8_nl10_lr3',\n",
+    "    # 'transformer/bs4_nhead8_nl10_lr4',\n",
     "    # 'bs32_hs100_nl100',\n",
     "    # 'bs64_hs100_nl100',\n",
     "]\n",
     "\n",
     "max_len_models = max(len(m) for m in models)\n",
-    "root = \"/home/rtlink/robros/log/0205\"\n",
+    "root = \"/home/rtlink/robros/log/0207\"\n",
     "\n",
     "loss_dict = {}\n",
     "name_list = []\n",
