--- a/script/data/differentiator.ipynb
+++ b/script/data/differentiator.ipynb
@@ -1,18 +1,51 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "[오후 5:14] ksj04199 (게스트)\n",
+    "### Final Diff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_202212/2623454527.py:2: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n",
+      "Processing files:   0%|          | 0/7 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m현재 셀 또는 이전 셀에서 코드를 실행하는 동안 Kernel이 충돌했습니다. \n",
+      "\u001b[1;31m셀의 코드를 검토하여 가능한 오류 원인을 식별하세요. \n",
+      "\u001b[1;31m자세한 내용을 보려면 <a href='https://aka.ms/vscodeJupyterKernelCrash'>여기</a>를 클릭하세요. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
+     ]
+    }
+   ],
+   "source": [
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from tqdm import tqdm\n",
     " \n",
-    "def process_and_save_differential(input_dir, output_dir, chunk_size=10000):\n",
+    "def process_and_save_differential(input_dir, output_dir, chunk_size=50000):\n",
     "    os.makedirs(output_dir, exist_ok=True)  \n",
     "    file_list = os.listdir(input_dir)\n",
     "    for filename in tqdm(file_list, desc=\"Processing files\"):\n",
@@ -31,10 +64,155 @@
     "            result_df.to_csv(output_file_path, index=False, header=None)\n",
     " \n",
     " \n",
-    "input_dir_example = \"/home/rtlink/robros/dataset/0215/0215_free/input_data/joint_position\"\n",
-    "output_dir_example = \"/home/rtlink/robros/dataset/0215/0215_free/input_data/joint_velocity\"\n",
+    "input_dir_example = \"/home/rtlink/robros/dataset/0216_free/input_data/joint_position\"\n",
+    "output_dir_example = \"/home/rtlink/robros/dataset/0216_free/input_data/joint_veloctiy\"\n",
     " \n",
     "process_and_save_differential(input_dir_example, output_dir_example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import csv\n",
+    "import numpy as np\n",
+    "\n",
+    "def differentiate_and_save(input_dir, output_dir):\n",
+    "    os.makedirs(output_dir, exist_ok=True)\n",
+    "    file_list = os.listdir(input_dir)\n",
+    "    for filename in file_list:\n",
+    "        if filename.endswith(\".csv\"):\n",
+    "            file_path = os.path.join(input_dir, filename)\n",
+    "            output_file_path = os.path.join(output_dir, filename)\n",
+    "            with open(file_path, mode='r') as file:\n",
+    "                reader = csv.reader(file)\n",
+    "                for row in reader:\n",
+    "                    # 문자열 데이터를 float 타입의 numpy 배열로 변환\n",
+    "                    data = np.array(row, dtype=float)\n",
+    "                    # 데이터 미분 계산\n",
+    "                    differentiated_data = np.diff(data)\n",
+    "                    # 미분된 데이터 저장\n",
+    "                    with open(output_file_path, mode='w', newline='') as output_file:\n",
+    "                        writer = csv.writer(output_file)\n",
+    "                        writer.writerow(differentiated_data)\n",
+    "\n",
+    "input_dir_example = \"/home/rtlink/robros/dataset/0216_free/input_data/joint_position\"\n",
+    "output_dir_example = \"/home/rtlink/robros/dataset/0216_free/input_data/joint_velocity\"\n",
+    "\n",
+    "differentiate_and_save(input_dir_example, output_dir_example)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Normalize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os \n",
+    "import csv\n",
+    "import numpy as np\n",
+    "\n",
+    "def normalize(input_dir, output_dir):\n",
+    "    os.makedirs(output_dir, exist_ok=True)\n",
+    "    file_list = os.listdir(input_dir)\n",
+    "    for filename in file_list:\n",
+    "        if filename.endswith(\".csv\"):\n",
+    "            file_path = os.path.join(input_dir, filename)\n",
+    "            output_file_path = os.path.join(output_dir, filename)\n",
+    "            # 초기 데이터 컨테이너\n",
+    "            all_data = []\n",
+    "            with open(file_path, mode='r') as file:\n",
+    "                reader = csv.reader(file)\n",
+    "                for row in reader:\n",
+    "                    # 문자열 데이터를 float 타입의 numpy 배열로 변환\n",
+    "                    data = np.array(row, dtype=float)\n",
+    "                    all_data.append(data)\n",
+    "            # numpy 배열로 전환\n",
+    "            all_data = np.array(all_data)\n",
+    "            # 전체 데이터에 대한 min-max 정규화\n",
+    "            min_val = np.min(all_data)\n",
+    "            max_val = np.max(all_data)\n",
+    "            normalized_data = (all_data - min_val) / (max_val - min_val + 1e-9)  # 0으로 나누는 것 방지\n",
+    "            # 정규화된 데이터를 한 줄에 저장\n",
+    "            with open(output_file_path, mode='w', newline='') as file:\n",
+    "                writer = csv.writer(file)\n",
+    "                writer.writerow(normalized_data.flatten())  # 1D 배열로 변환하여 저장\n",
+    "\n",
+    "\n",
+    "input_dir = \"/home/rtlink/robros/dataset/0215/0215_free/target_data\"\n",
+    "output_dir = \"/home/rtlink/robros/dataset/0215_norm/0215_free/target_data\" \n",
+    " \n",
+    "normalize(input_dir, output_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'to_numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 32\u001b[0m\n\u001b[1;32m     29\u001b[0m input_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/home/rtlink/robros/dataset/0215/0215_free/input_data/joint_velocity\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     30\u001b[0m output_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/home/rtlink/robros/dataset/0215_norm/0215_free/input_data/joint_velocity\u001b[39m\u001b[38;5;124m\"\u001b[39m \n\u001b[0;32m---> 32\u001b[0m \u001b[43mmin_max_normalize_and_save\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput_dir\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[13], line 17\u001b[0m, in \u001b[0;36mmin_max_normalize_and_save\u001b[0;34m(input_dir, output_dir, chunk_size)\u001b[0m\n\u001b[1;32m     15\u001b[0m normalized_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame()\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m chunk \u001b[38;5;129;01min\u001b[39;00m chunk_container:\n\u001b[0;32m---> 17\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[43mchunk\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_numpy\u001b[49m()\n\u001b[1;32m     18\u001b[0m     min_val \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mmin(axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m     19\u001b[0m     max_val \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mmax(axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'to_numpy'"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    " \n",
+    "def min_max_normalize_and_save(input_dir, output_dir, chunk_size=10000):\n",
+    "    os.makedirs(output_dir, exist_ok=True)\n",
+    "    file_list = os.listdir(input_dir)\n",
+    "    for filename in file_list:\n",
+    "        if filename.endswith(\".csv\"):\n",
+    "            file_path = os.path.join(input_dir, filename)\n",
+    "            output_file_path = os.path.join(output_dir, filename)\n",
+    " \n",
+    "            chunk_container = pd.read_csv(file_path, chunksize=chunk_size, header=None)\n",
+    " \n",
+    "            normalized_df = pd.DataFrame()\n",
+    "            for chunk in chunk_container:\n",
+    "                data = chunk.to_numpy()\n",
+    "                min_val = data.min(axis=0)\n",
+    "                max_val = data.max(axis=0)\n",
+    "                # Avoid division by zero\n",
+    "                range_val = max_val - min_val\n",
+    "                range_val[range_val == 0] = 1\n",
+    "                normalized_data = (data - min_val) / range_val\n",
+    "                normalized_chunk = pd.DataFrame(normalized_data)\n",
+    "                normalized_df = pd.concat([normalized_df, normalized_chunk], ignore_index=True)\n",
+    " \n",
+    "            normalized_df.to_csv(output_file_path, index=False, header=None)\n",
+    " \n",
+    "input_dir = \"/home/rtlink/robros/dataset/0215/0215_free/input_data/joint_velocity\"\n",
+    "output_dir = \"/home/rtlink/robros/dataset/0215_norm/0215_free/input_data/joint_velocity\" \n",
+    " \n",
+    "min_max_normalize_and_save(input_dir, output_dir)"
    ]
   },
   {
