--- a/script/data/differentiator.ipynb
+++ b/script/data/differentiator.ipynb
@@ -90,11 +90,8 @@
     "            with open(file_path, mode='r') as file:\n",
     "                reader = csv.reader(file)\n",
     "                for row in reader:\n",
-    "                    # 문자열 데이터를 float 타입의 numpy 배열로 변환\n",
     "                    data = np.array(row, dtype=float)\n",
-    "                    # 데이터 미분 계산\n",
     "                    differentiated_data = np.diff(data)\n",
-    "                    # 미분된 데이터 저장\n",
     "                    with open(output_file_path, mode='w', newline='') as output_file:\n",
     "                        writer = csv.writer(output_file)\n",
     "                        writer.writerow(differentiated_data)\n",
@@ -136,24 +133,19 @@
     "        if filename.endswith(\".csv\"):\n",
     "            file_path = os.path.join(input_dir, filename)\n",
     "            output_file_path = os.path.join(output_dir, filename)\n",
-    "            # 초기 데이터 컨테이너\n",
     "            all_data = []\n",
     "            with open(file_path, mode='r') as file:\n",
     "                reader = csv.reader(file)\n",
     "                for row in reader:\n",
-    "                    # 문자열 데이터를 float 타입의 numpy 배열로 변환\n",
     "                    data = np.array(row, dtype=float)\n",
     "                    all_data.append(data)\n",
-    "            # numpy 배열로 전환\n",
     "            all_data = np.array(all_data)\n",
-    "            # 전체 데이터에 대한 min-max 정규화\n",
     "            min_val = np.min(all_data)\n",
     "            max_val = np.max(all_data)\n",
-    "            normalized_data = (all_data - min_val) / (max_val - min_val + 1e-9)  # 0으로 나누는 것 방지\n",
-    "            # 정규화된 데이터를 한 줄에 저장\n",
+    "            normalized_data = (all_data - min_val) / (max_val - min_val + 1e-9) \n",
     "            with open(output_file_path, mode='w', newline='') as file:\n",
     "                writer = csv.writer(file)\n",
-    "                writer.writerow(normalized_data.flatten())  # 1D 배열로 변환하여 저장\n",
+    "                writer.writerow(normalized_data.flatten())  \n",
     "\n",
     "\n",
     "input_dir = \"/home/rtlink/robros/dataset/0215/0215_free/target_data\"\n",
@@ -331,19 +323,15 @@
     "    if filename.endswith(\".csv\"):\n",
     "        file_path = os.path.join(input_dir, filename)\n",
     "        \n",
-    "        # 파일을 읽고 padding 적용\n",
     "        df = read_csv_with_padding(file_path)\n",
     "        \n",
-    "        # 새로운 위치에 padding된 데이터 저장\n",
     "        padded_file_path = os.path.join(padded_input_dir, filename)\n",
     "        df.to_csv(padded_file_path, index=False)\n",
     "        \n",
-    "        # 속도 계산\n",
     "        velocity = df.diff(axis=1).fillna(0)\n",
     "        velocity_file_path = os.path.join(velocity_dir, filename)\n",
     "        velocity.to_csv(velocity_file_path, index=False)\n",
-    "        \n",
-    "        # 가속도 계산\n",
+    "\n",
     "        acceleration = velocity.diff(axis=1).fillna(0)\n",
     "        acceleration_file_path = os.path.join(acceleration_dir, filename)\n",
     "        acceleration.to_csv(acceleration_file_path, index=False)\n"
